[package]
name = "xi-aurelius"
version = "0.1.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
aurelius = "0.6"
xi-core-lib = { git = "https://github.com/xi-editor/xi-editor" }
xi-rope = { git = "https://github.com/xi-editor/xi-editor" }
xi-plugin-lib = { git = "https://github.com/xi-editor/xi-editor" }
lazy_static = "1.2.0"
